# diff-graph-generator

./: Cargo.toml  README.md
prompts/: prompt_definition  prompt_function_boundary  prompt_function_call_path  prompt_function_call_validator  prompt_function_calls  prompt_function_def  prompt_function_lines  prompt_function_name  prompt_import_def  prompt_import_file_path  prompt_import_lines  prompt_import_path  prompt_valid_function_def
src/: main.rs
src/core/: diff_graph.rs  mod.rs
src/graph/: elements.rs  file_imports.rs  function_call.rs  function_line_range.rs  function_name.rs  gitops.rs  graph_edges.rs  graph_info.rs  mermaid_elements.rs  utils.rs
src/logger/: init.rs
src/utils/: gitops.rs  mod.rs  prompts.rs
