[package]
name = "diff-graph-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20" # MIT/Apache2
walkdir = "2.5.0" # Unlicence/MIT
sha256 = "1.1.1"
rand = "0.8.5"
fern = "0.6.2" # MIT
once_cell = "1.18.0" # MIT
chrono = "0.4.26"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }